completing v0 of the project