@@ -8,10 +8,10 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -22,8 +22,11 @@ public class BugController {
 
     private final BugService bugService;
 
+    // 🧪 Tester or Manager can create bugs
+    @PreAuthorize("hasAnyRole('TESTER','MANAGER','ADMIN')")
     @PostMapping
-    public ResponseEntity<BugResponse> createBug(@Valid @RequestBody BugRequest bugRequest,
+    public ResponseEntity<BugResponse> createBug(
+            @Valid @RequestBody BugRequest bugRequest,
             @RequestHeader("X-User-Id") Long reporterId) {
         log.info("Creating bug for reporter ID: {}", reporterId);
 
@@ -38,20 +41,22 @@ public class BugController {
                 .build();
 
         Bug createdBug = bugService.createBug(bug);
-        BugResponse response = mapToResponse(createdBug);
-
-        return ResponseEntity.status(HttpStatus.CREATED).body(response);
+        return ResponseEntity.status(HttpStatus.CREATED).body(mapToResponse(createdBug));
     }
 
+    // 👔 Manager or Admin can view all bugs
+    @PreAuthorize("hasAnyRole('MANAGER','ADMIN')")
     @GetMapping
     public ResponseEntity<List<BugResponse>> getAllBugs() {
         log.info("Fetching all bugs");
         List<BugResponse> bugs = bugService.getAllBugs().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(bugs);
     }
 
+    // 👨‍💻 Developer, Tester, Manager, Admin can view bug details
+    @PreAuthorize("hasAnyRole('DEVELOPER','TESTER','MANAGER','ADMIN')")
     @GetMapping("/{id}")
     public ResponseEntity<BugResponse> getBugById(@PathVariable Long id) {
         log.info("Fetching bug by ID: {}", id);
@@ -59,62 +64,77 @@ public class BugController {
         return ResponseEntity.ok(mapToResponse(bug));
     }
 
+    // 👨‍💻 Developer, Tester, Manager, Admin can view project bugs
+    @PreAuthorize("hasAnyRole('DEVELOPER','TESTER','MANAGER','ADMIN')")
     @GetMapping("/project/{projectId}")
     public ResponseEntity<List<BugResponse>> getBugsByProject(@PathVariable Long projectId) {
         log.info("Fetching bugs for project ID: {}", projectId);
         List<BugResponse> bugs = bugService.getBugsByProject(projectId).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(bugs);
     }
 
+    // 🧪 Tester can view bugs they reported
+    @PreAuthorize("hasAnyRole('TESTER','MANAGER','ADMIN')")
     @GetMapping("/reporter/{reporterId}")
     public ResponseEntity<List<BugResponse>> getBugsByReporter(@PathVariable Long reporterId) {
         log.info("Fetching bugs reported by user ID: {}", reporterId);
         List<BugResponse> bugs = bugService.getBugsByReporter(reporterId).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(bugs);
     }
 
+    // 👨‍💻 Developer, Manager, Admin can view assigned bugs
+    @PreAuthorize("hasAnyRole('DEVELOPER','MANAGER','ADMIN')")
     @GetMapping("/assignee/{assigneeId}")
     public ResponseEntity<List<BugResponse>> getBugsByAssignee(@PathVariable Long assigneeId) {
         log.info("Fetching bugs assigned to user ID: {}", assigneeId);
         List<BugResponse> bugs = bugService.getBugsByAssignee(assigneeId).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(bugs);
     }
 
+    // 👨‍💻 Developer, Tester, Manager, Admin can filter by status
+    @PreAuthorize("hasAnyRole('DEVELOPER','TESTER','MANAGER','ADMIN')")
     @GetMapping("/status/{status}")
     public ResponseEntity<List<BugResponse>> getBugsByStatus(@PathVariable BugStatus status) {
         log.info("Fetching bugs with status: {}", status);
         List<BugResponse> bugs = bugService.getBugsByStatus(status).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(bugs);
     }
 
+    // 👨‍💻 Developer, Tester, Manager, Admin can filter by severity
+    @PreAuthorize("hasAnyRole('DEVELOPER','TESTER','MANAGER','ADMIN')")
     @GetMapping("/severity/{severity}")
     public ResponseEntity<List<BugResponse>> getBugsBySeverity(@PathVariable BugSeverity severity) {
         log.info("Fetching bugs with severity: {}", severity);
         List<BugResponse> bugs = bugService.getBugsBySeverity(severity).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(bugs);
     }
 
+    // 👨‍💻 Developer, Tester, Manager, Admin can view unassigned bugs
+    @PreAuthorize("hasAnyRole('DEVELOPER','TESTER','MANAGER','ADMIN')")
     @GetMapping("/project/{projectId}/unassigned")
     public ResponseEntity<List<BugResponse>> getUnassignedBugsByProject(@PathVariable Long projectId) {
         log.info("Fetching unassigned bugs for project ID: {}", projectId);
         List<BugResponse> bugs = bugService.getUnassignedBugsByProject(projectId).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(bugs);
     }
 
+    // 👔 Manager or Admin can update bug details
+    @PreAuthorize("hasAnyRole('MANAGER','ADMIN')")
     @PutMapping("/{id}")
-    public ResponseEntity<BugResponse> updateBug(@PathVariable Long id,
+    public ResponseEntity<BugResponse> updateBug(
+            @PathVariable Long id,
             @Valid @RequestBody BugRequest bugRequest) {
         log.info("Updating bug with ID: {}", id);
 
@@ -131,6 +151,8 @@ public class BugController {
         return ResponseEntity.ok(mapToResponse(updatedBug));
     }
 
+    // 🦸 Admin only can delete bugs
+    @PreAuthorize("hasRole('ADMIN')")
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteBug(@PathVariable Long id) {
         log.info("Deleting bug with ID: {}", id);
@@ -138,22 +160,30 @@ public class BugController {
         return ResponseEntity.noContent().build();
     }
 
+    // 👨‍💻 Developer, Tester, Manager, Admin can update status
+    @PreAuthorize("hasAnyRole('DEVELOPER','TESTER','MANAGER','ADMIN')")
     @PatchMapping("/{id}/status/{status}")
-    public ResponseEntity<BugResponse> updateBugStatus(@PathVariable Long id,
+    public ResponseEntity<BugResponse> updateBugStatus(
+            @PathVariable Long id,
             @PathVariable BugStatus status) {
         log.info("Updating bug status to {} for bug ID: {}", status, id);
         Bug updatedBug = bugService.updateBugStatus(id, status);
         return ResponseEntity.ok(mapToResponse(updatedBug));
     }
 
+    // 👔 Manager or Tester can assign a developer
+    @PreAuthorize("hasAnyRole('TESTER','MANAGER','ADMIN')")
     @PatchMapping("/{id}/assign/{assigneeId}")
-    public ResponseEntity<BugResponse> assignBug(@PathVariable Long id,
+    public ResponseEntity<BugResponse> assignBug(
+            @PathVariable Long id,
             @PathVariable Long assigneeId) {
         log.info("Assigning bug ID: {} to developer ID: {}", id, assigneeId);
         Bug assignedBug = bugService.assignBugToDeveloper(id, assigneeId);
         return ResponseEntity.ok(mapToResponse(assignedBug));
     }
 
+    // 👔 Manager or Admin can unassign
+    @PreAuthorize("hasAnyRole('MANAGER','ADMIN')")
     @PatchMapping("/{id}/unassign")
     public ResponseEntity<BugResponse> unassignBug(@PathVariable Long id) {
         log.info("Unassigning bug ID: {}", id);
@@ -161,6 +191,8 @@ public class BugController {
         return ResponseEntity.ok(mapToResponse(unassignedBug));
     }
 
+    // 👨‍💻 Developer, Tester, Manager, Admin can count
+    @PreAuthorize("hasAnyRole('DEVELOPER','TESTER','MANAGER','ADMIN')")
     @GetMapping("/project/{projectId}/count")
     public ResponseEntity<Long> countBugsByProject(@PathVariable Long projectId) {
         log.info("Counting bugs for project ID: {}", projectId);
@@ -168,8 +200,11 @@ public class BugController {
         return ResponseEntity.ok(count);
     }
 
+    // 👨‍💻 Developer, Tester, Manager, Admin can count by status
+    @PreAuthorize("hasAnyRole('DEVELOPER','TESTER','MANAGER','ADMIN')")
     @GetMapping("/project/{projectId}/count/status/{status}")
-    public ResponseEntity<Long> countBugsByProjectAndStatus(@PathVariable Long projectId,
+    public ResponseEntity<Long> countBugsByProjectAndStatus(
+            @PathVariable Long projectId,
             @PathVariable BugStatus status) {
         log.info("Counting bugs for project ID: {} with status: {}", projectId, status);
         long count = bugService.countBugsByProjectAndStatus(projectId, status);
